--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".DeleteActivity"
             android:exported="false" />
         <activity
-            android:name=".UpdateAcrivity"
+            android:name=".UpdateActivity"
             android:exported="false" />
         <activity
             android:name=".CreateActivity"
